--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "typescript": "^5.4.5"
   },
   "dependencies": {
+    "eslint-plugin-jsx-expressions": "^1.3.2",
     "kuler": "^2.0.0",
     "randomcolor": "^0.6.2"
   }
